--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
           margin: 0 auto 20px;
         "></div>
         <h2>Cargando...</h2>
-        <p>Iniciando aplicación</p>
+        <p>Iniciando aplicación...</p>
       </div>
     </div>
     
