--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,12 @@
 <html lang="es">
 <head>
   <meta charset="utf-8">
-  <title>Login Project</title>
+  <title>Casa de Música Castillo - Sistema de Autenticación</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Sistema de autenticación con Angular y Node.js">
-  <meta name="author" content="Tu Nombre">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="description" content="Casa de Música Castillo - Instrumentos & Audio Profesional. Sistema de autenticación seguro para acceso a servicios.">
+  <meta name="author" content="Casa de Música Castillo">
+  <link rel="icon" type="image/png" href="assets/logoP.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
   
@@ -16,10 +16,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   
   <!-- Meta tags para PWA (opcional) -->
-  <meta name="theme-color" content="#667eea">
+  <meta name="theme-color" content="#3E2723">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
-  <meta name="apple-mobile-web-app-title" content="Login Project">
+  <meta name="apple-mobile-web-app-title" content="Casa de Música Castillo">
 </head>
 <body>
   <app-root>
